force-app/main/default/objects/SSP_SourcesOfCoverage__mdt/SSP_SourcesOfCoverage__mdt.object-meta.xml
<CustomObject>
    <description>This meta data is use to store the Medicaid and KI-HIPP Source of Coverage.</description>
    <label>SSP Sources of Coverage</label>
    <pluralLabel>SSP Sources of Coverage</pluralLabel>
</CustomObject>