force-app/main/default/objects/SSP_SourcesOfCoverage__mdt/fields/Programs_Applied__c.field-meta.xml
<CustomField>
    <fullName>Programs_Applied__c</fullName>
    <description>Stores the applicable programs for source of coverage</description>
    <label>Programs Applied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>