force-app/main/default/objects/SSP_SourcesOfCoverage__mdt/fields/SourceOfCoverageSpanish__c.field-meta.xml
<CustomField>
    <fullName>SourceOfCoverageSpanish__c</fullName>
    <description>This field is used to store Spanish value</description>
    <label>Source Of Coverage Spanish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>