force-app/main/default/objects/SSP_SourcesOfCoverage__mdt/fields/SourceOfCoverageValue__c.field-meta.xml
<CustomField>
    <fullName>SourceOfCoverageValue__c</fullName>
    <description>This field is use to store the Label/value of Source of Coverage</description>
    <label>Source Of Coverage Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>