force-app/main/default/objects/SSP_SourcesOfCoverage__mdt/listViews/KI_HIPP.listView-meta.xml
<ListView>
    <fullName>KI_HIPP</fullName>
    <columns>Programs_Applied__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>SourceOfCoverageValue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Programs_Applied__c</field>
        <operation>contains</operation>
        <value>KP</value>
    </filters>
    <label>KI-HIPP</label>
    <language>en_US</language>
</ListView>