force-app/main/default/objects/SSP_SourcesOfCoverage__mdt/listViews/Medicaid.listView-meta.xml
<ListView>
    <fullName>Medicaid</fullName>
    <columns>Programs_Applied__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>SourceOfCoverageValue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>Programs_Applied__c</field>
        
            <operation>contains</operation>
        
            <value>MA</value>
        
        </filters>
    <label>Medicaid</label>
    <language>en_US</language>
</ListView>